--- a/src/main/webapp/arrangement/List.xhtml
+++ b/src/main/webapp/arrangement/List.xhtml
@@ -35,7 +35,7 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement Start Date"/>
+                                <h:outputText value="Start date"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementstartdate}">
                                 <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -43,7 +43,7 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement Start Time"/>
+                                <h:outputText value="Start time"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementstarttime}">
                                 <f:convertDateTime pattern="HH:mm:ss" />
@@ -51,13 +51,13 @@
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement Duration in Minutes"/>
+                                <h:outputText value="Duration in minutes"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementdurationperminute}"/>
                         </p:column>
                         <p:column>
                             <f:facet name="header">
-                                <h:outputText value="Arrangement Type"/>
+                                <h:outputText value="Type"/>
                             </f:facet>
                             <h:outputText value="#{item.arrangementtype}"/>
                         </p:column>
