--- a/src/main/webapp/availability/List.xhtml
+++ b/src/main/webapp/availability/List.xhtml
@@ -31,19 +31,19 @@
 
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListAvailabilityTitle_availabilityid}"/>
+                            <h:outputText value="Availability ID"/>
                         </f:facet>
                         <h:outputText value="#{item.availabilityid}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListAvailabilityTitle_durationperminute}"/>
+                            <h:outputText value="Duration in minutes"/>
                         </f:facet>
                         <h:outputText value="#{item.durationperminute}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListAvailabilityTitle_startdate}"/>
+                            <h:outputText value="Start date"/>
                         </f:facet>
                         <h:outputText value="#{item.startdate}">
                             <f:convertDateTime pattern="MM/dd/yyyy" />
@@ -51,7 +51,7 @@
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListAvailabilityTitle_starttime}"/>
+                            <h:outputText value="Start time"/>
                         </f:facet>
                         <h:outputText value="#{item.starttime}">
                             <f:convertDateTime pattern="HH:mm:ss" />
@@ -59,13 +59,13 @@
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListAvailabilityTitle_supplierid}"/>
+                            <h:outputText value="Supplier ID"/>
                         </f:facet>
                         <h:outputText value="#{item.supplierid}"/>
                     </p:column>
                     <p:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListAvailabilityTitle_materialid}"/>
+                            <h:outputText value="Material ID"/>
                         </f:facet>
                         <h:outputText value="#{item.materialid}"/>
                     </p:column>
