--- a/src/main/webapp/availability/Edit.xhtml
+++ b/src/main/webapp/availability/Edit.xhtml
@@ -14,20 +14,20 @@
                 <h:panelGroup id="display">
                     <h:inputHidden id="availabilityid" value="#{availabilityController.selected.availabilityid}"/>
                     <p:panelGrid columns="2" rendered="#{availabilityController.selected != null}">
-                        <p:outputLabel value="Duration in minutes" for="durationperminute" />
+                        <p:outputLabel value="#{bundle.EditAvailabilityLabel_durationperminute}" for="durationperminute" />
                         <p:inputText id="durationperminute" required="true" value="#{availabilityController.selected.durationperminute}" title="#{bundle.EditAvailabilityTitle_durationperminute}" />
-                        <p:outputLabel value="Start date" for="startdate" />
+                        <p:outputLabel value="#{bundle.EditAvailabilityLabel_startdate}" for="startdate" />
                         <p:calendar id="startdate" required="true" pattern="MM/dd/yyyy" value="#{availabilityController.selected.startdate}" title="#{bundle.EditAvailabilityTitle_startdate}"  showOn="button"/>
-                        <p:outputLabel value="Start time" for="starttime" />
+                        <p:outputLabel value="#{bundle.EditAvailabilityLabel_starttime}" for="starttime" />
                         <p:calendar id="starttime" required="true" pattern="HH:mm" value="#{availabilityController.selected.starttime}" title="#{bundle.EditAvailabilityTitle_starttime}"  showOn="button"/>
-                        <p:outputLabel value="Supplier ID" for="supplierid" />
+                        <p:outputLabel value="#{bundle.EditAvailabilityLabel_supplierid}" for="supplierid" />
                         <p:selectOneMenu id="supplierid" required="true" value="#{availabilityController.selected.supplierid}" >
                             <f:selectItem itemLabel="#{bundle.CreateMaterialTitle_materialtype}"/>
                             <f:selectItems value="#{supplierController.itemsAvailableSelectOne}"
                                            var="supplieridItem" itemLabel="#{supplieridItem.bedrijfsnaam}"
                                            itemValue="#{supplieridItem}"/>
                         </p:selectOneMenu>
-                        <p:outputLabel value="Material ID" for="materialid" />
+                        <p:outputLabel value="#{bundle.EditAvailabilityLabel_materialid}" for="materialid" />
                         <p:selectOneMenu id="materialid" value="#{availabilityController.selected.materialid}" >
                             <f:selectItem itemLabel="#{bundle.SelectOneMessage}"/>
                             <f:selectItems value="#{materialController.itemsAvailableSelectOne}"
